update changes day 29.09.2026 - implementação de apis e funcionalidades e melhoria de visual da aplicação
